Deploy/Ingress/deeplook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/app-root: /CityEyes/
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1500M
    nginx.ingress.kubernetes.io/proxy-body-size: 1500M
  name: deeplook
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: deeplook
              servicePort: 8080
